--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "bootstrap": "^4.3.1",
     "bootstrap-toggle": "^2.2.2",
     "core-js": "^2.5.4",
+    "dexie": "^2.0.4",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
+    "ngx-dexie": "^1.1.0",
     "popper.js": "^1.15.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
